environments/qa/kubernetes/services/observability/alert-manager-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-manager
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-manager
  template:
    metadata:
      name: alert-manager
      labels:
        app: alert-manager
    spec:
      containers:
        - name: alert-manager
          image: quay.io/prometheus/alertmanager:v0.23.0
          args:
            - "--config.file=/etc/alert-manager/config.yml"
            - "--storage.path=/alert-manager"
          ports:
            - name: alertmanager
              containerPort: 9093
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 1000m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: alertmanager
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /-/ready
              port: alertmanager
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: config-volume
              mountPath: /etc/alert-manager
            - name: alert-manager
              mountPath: /alert-manager
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      volumes:
        - name: config-volume
          configMap:
            name: alert-manager-config
        - name: alert-manager
          persistentVolumeClaim:
            claimName: alertmanager-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: alert-manager
  namespace: observability
spec:
  selector:
    app: alert-manager
  type: NodePort
  ports:
    - port: 9093
      targetPort: 9093
      nodePort: 31000
